--- a/_config.yml
+++ b/_config.yml
@@ -7,37 +7,48 @@
 #
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
+#
 # Site settings
 # These are used to personalize your new site. If you look in the HTML files,
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Ravi Riley
-email:
-description: >- # this means to ignore newlines until "baseurl:"
-  write a desc. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: 
-url: https://raviriley.github.io
-repository: raviriley/raviriley.github.io
-twitter_username: username
-github_username: raviriley
-minimal_mistakes_skin: default
-search: true
 
-# Build settings
-markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
+minimal_mistakes_skin: default
+
+#Site Settings
+locale: "en-US"
+title          : "Ravi Riley"
+title_separator: "|"
+name           : "Your Name"
+description    : "My site hosts my resume and other stuff."
+url            : "https://raviriley.github.io"
+baseurl        : ""
+repository     : raviriley/raviriley.github.io
+#teaser        : # path of fallback teaser image, ie "/assets/images/500x300.png"
+#logo          : # path of logo image to display in the masthead, ie "/assets/images/88x88.png"
+#masthead_title: # overrides the website title displayed in the masthead, use " " for no title
+search         : true
+search_provider: lunr 
+#algolia search https://mmistakes.github.io/minimal-mistakes/docs/configuration/#algolia
+
+
+words_per_minute: 225
+
 # Outputting
-permalink: /:categories/:title/
-paginate: 5 # amount of posts to show
+permalink    : /:categories/:title/
+paginate     : 5 #amount of pages to show
 paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone     : # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 include:
   - _pages
-
+  
+markdown    : kramdown
+highlighter : rouge
+markdown_ext: "markdown,mkdown,mkdn,mkd,md"
+  
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
@@ -60,36 +71,49 @@ plugins:
   - jemoji
   - jekyll-include-cache
 
+
+#Site Author
+github_username: raviriley
 author:
-  name   : "Ravi Riley"
-  avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  name    : "Ravi Riley"
+  avatar  : "/assets/images/bio-photo.jpg"
+  bio     : "My awesome biography constrained to a sentence or two goes here."
+  #location:
+  email   : "raviriley@gmail.com"
   links:
-    - label: "Website"
+    # - label: "Email"
+      # icon: "fas fa-fw fa-envelope-square"
+      # url: "mailto:raviriley@gmail.com"
+    - label: "LinkedIn"
       icon: "fas fa-fw fa-link"
-      url: "https://"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+      url: "https://www.linkedin.com/in/raviriley/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
-
+      url: "https://github.com/raviriley"
+    - label: "Thingiverse"
+      icon: "fas fa-fw fa-link"
+      url: "https://thingiverse.com/raviriley"
+    # - label: "Instagram"
+      # icon: "fab fa-fw fa-instagram"
+      # url: "https://instagram.com/raviriley"
+      
+#Site Footer
 footer:
   links:
-    # - label: "Twitter"
-      # icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/"
+    - label: "LinkedIn"
+      icon: "fas fa-fw fa-link"
+      url: "https://www.linkedin.com/in/raviriley/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
-
+      url: "https://github.com/raviriley"
+    - label: "Thingiverse"
+      icon: "fas fa-fw fa-link"
+      url: "https://thingiverse.com/raviriley"
+    # - label: "Instagram"
+      # icon: "fab fa-fw fa-instagram"
+      # url: "https://instagram.com/raviriley"
+      
+#Defaults
 defaults:
   # _posts
   - scope:
@@ -109,3 +133,4 @@ defaults:
     values:
       layout: single
       author_profile: true
+#end
