--- a/_config.yml
+++ b/_config.yml
@@ -85,8 +85,7 @@ author:
       # icon: "fas fa-fw fa-envelope-square"
       # url: "mailto:raviriley@gmail.com"
     - label: "LinkedIn"
-      #icon: "fab fa-fw fa-linkedin"
-      icon: "fab fa-linkedin-in"
+      icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/raviriley/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
