--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,3 +4,9 @@ main:
     
   - title: "About"
     url: /about/
+    
+  # - title: "Projects"
+    # url: /projects/
+    
+  # - title: "About"
+    # url: /about/
