--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -25,7 +25,7 @@ en: &DEFAULT_EN
   related_label              : "You may also enjoy"
   follow_label               : "Follow:"
   feed_label                 : "Feed"
-  powered_by                 : "Powered by"
+  powered_by                 : "Built with"
   website_label              : "Website"
   email_label                : "Email"
   recent_posts               : "Recent posts"
