--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,8 +5,8 @@ main:
   - title: "About"
     url: /about/
     
-  # - title: "Projects"
-    # url: /projects/
+  - title: "Projects"
+    url: /projects/
     
   # - title: "About"
     # url: /about/
