--- a/_config.yml
+++ b/_config.yml
@@ -125,6 +125,7 @@ defaults:
       comments: true
       share: true
       related: true
+      toc_sticky: true
   # _pages
   - scope:
       path: "_pages"
@@ -132,4 +133,5 @@ defaults:
     values:
       layout: single
       author_profile: true
+      toc_sticky: true
 #end
