--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@ main:
   - title: "Resume"
     url: /resume/
     
-  - title: "About"
-    url: /about/
+  - title: "Blog"
+    url: /blog/
     
   - title: "Projects"
     url: /projects/
