Update author bio

--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ github_username: raviriley
 author:
   name    : "Ravi Riley"
   avatar  : "/assets/images/bio-pic.png"
-  bio     : "Senior in high school working on CAD, 3D printing, and coding. Founded a 3D printing and modeling business and helped build a software company connecting high school programmers to local businesses."
+  bio     : "Senior in high school. Founded a 3D printing and modeling business and helped build a software company connecting high school programmers to local businesses."
   #location:
   email   : "raviriley@gmail.com"
   links:
