attempt #3 at fixing serverside image 404 - everything works locally

--- a/_config.yml
+++ b/_config.yml
@@ -143,10 +143,10 @@ animated-gallery:
       image: "/assets/images/capture0.png"
       url: "/layout-gallery/"
     - label: "Intoolovation"
-      image: "/assets/images/test/Capture1.png"
+      image: "/assets/images/capture1.png"
       url: "https://intoolovation.com"
     - label: "Markdown Showcase"
-      image: "/assets/images/test/Capture2.png"
+      image: "/assets/images/capture2.png"
       url: "/archive-sample/"
 
 #end
