--- a/_config.yml
+++ b/_config.yml
@@ -143,7 +143,7 @@ animated-gallery:
       image: https://placehold.it/1130x1500
       url: "/layout-gallery/"
     - label: "Intoolovation"
-      image: /assets/images/capture.png
+      image: /assets/images/bio-pic.png
       url: "https://intoolovation.com"
     - label: "Markdown Showcase"
       image: /assets/images/capture2.png
