--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,11 +12,14 @@ main:
     url: /portfolio/
 
 projects:
-  - title: "Layout Gallery"
-    url: /layout-gallery/
-    
   - title: "Intoolovation"
     url: https://intoolovation.com
+    
+  - title: "Layout Gallery"
+    url: /layout-gallery/
+
+  - title: "CV Enterprises"
+    url: https://cv-enterprises.github.io/
     
   - title: "Markdown Showcase"
     url: /archive-sample/
