--- a/_config.yml
+++ b/_config.yml
@@ -147,7 +147,7 @@ animated-gallery:
       url: "/layout-gallery/"
     - label: "**CV Enterprises**<br/>Official site for a software company connecting CVHS programmers to local businesses"
       image: /assets/images/CVENTlogoResized.png
-      url: "https://cv-enterprises.github.io"
+      url: "https://cventerprises.org"
     - label: "**Markdown Showcase**<br/>sample page to showcase various Markdown features’ syntax and how they look when implemented on this theme"
       image: /assets/images/markdown-showcase.PNG
       url: "/archive-sample/"
