--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ author:
   avatar  : "/assets/images/senior_portrait_red_background.jpg"
   bio     : "Senior in high school. Founded a 3D printing and modeling business and helped build a software company connecting high school programmers to local businesses."
   #location:
-  email   : "raviriley@gmail.com"
+  email   : "ravi@intoolovation.com"
   links:
     # - label: "Email"
       # icon: "fas fa-fw fa-envelope-square"
