--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,11 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 #
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
 remote_theme: mmistakes/minimal-mistakes
 minimal_mistakes_skin: "aqua" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum" "sunrise"
-
 
 #Site Settings
 locale: "en-US"
@@ -66,7 +55,6 @@ plugins:
   - jekyll-remote-theme
   - jekyll-paginate
   - jekyll-gist
-  - jekyll-feed
   - jemoji
   - jekyll-include-cache
   - jekyll-sitemap
@@ -76,14 +64,11 @@ github_username: raviriley
 author:
   name    : "Ravi Riley"
   #avatar  : "/assets/images/bio-pic.png" #placeholder image
-  avatar  : "/assets/images/senior_portrait_red_background.jpg"
+  avatar  : "/assets/images/portrait.png"
   bio     : "Senior in high school. Founded a 3D printing and modeling business and helped build a software company connecting high school programmers to local businesses."
   #location:
   email   : "ravi@intoolovation.com"
   links:
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:ravi@intoolovation.com"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/raviriley/"
@@ -93,15 +78,12 @@ author:
     - label: "Thingiverse"
       icon: "fas fa-fw fa-link"
       url: "https://thingiverse.com/raviriley"
-    # - label: "Instagram"
-      # icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/raviriley"
       
 #Site Footer
 footer:
   links:
     - label: "LinkedIn"
-      icon: "fas fa-fw fa-link"
+      icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/raviriley/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
@@ -109,9 +91,6 @@ footer:
     - label: "Thingiverse"
       icon: "fas fa-fw fa-link"
       url: "https://thingiverse.com/raviriley"
-    # - label: "Instagram"
-      # icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/raviriley"
       
 #Defaults
 defaults:
