--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ author:
   name    : "Ravi Riley"
   #avatar  : "/assets/images/bio-pic.png" #placeholder image
   avatar  : "/assets/images/portrait.png"
-  bio     : "Senior in high school. Founded a 3D printing and modeling business and helped build a software company connecting high school programmers to local businesses."
+  bio     : "Berkeley EECS student. Founded a 3D printing and modeling business and helped build a software company connecting high school programmers to local businesses."
   #location:
   email   : "ravi@intoolovation.com"
   links:
