--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # in the templates via {{ site.myvariable }}.
 
 remote_theme: mmistakes/minimal-mistakes
-minimal_mistakes_skin: "aqua" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum" "sunrise"
+minimal_mistakes_skin: "dark" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum" "sunrise"
 
 #Site Settings
 locale: "en-US"
